@@ -41,9 +41,9 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.TreeMap;
 
 @CacheConfig(cacheNames = "case_search")
 @Component
@@ -213,13 +213,11 @@ public class CaseSearchHelper {
             builder.append("_").append(restoreFactory.getAsUsername());
         }
         builder.append("_").append(uri);
-        List<String> keyList = queryParams.keySet().stream().collect(Collectors.toList());
-        Collections.sort(keyList);
-        for (String key : keyList) {
+        Map<String, Collection<String>> sortedQueryParams = new TreeMap<>(queryParams.asMap());
+        for (String key : sortedQueryParams.keySet()) {
             builder.append("_").append(key);
             Collection<String> values = queryParams.get(key);
-            List<String> valuesList = values.stream().collect(Collectors.toList());
-            Collections.sort(valuesList);
+            List<String> valuesList = values.stream().sorted().toList();
             for (String value : valuesList) {
                 builder.append("=").append(value);
             }
